# robocode-python_beginner

./: README.md
chat/: pyproject.toml
chat/chat/: .dotenv  chat.py
shopping_list/: pyproject.toml
shopping_list/shopping_list/: shop-list.py
turtle-cli-controller/: pyproject.toml
turtle-cli-controller/turtle-cli-controller/: turtle-cli.py
