[tool.poetry]
name = "shopping-list"
version = "0.1.0"
description = ""
authors = ["nNeD5 <oned.reg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
textual = "^0.38.1"
asciimatics = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
